--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>EDberg Education - Formative Feedback Engine</title>
+    <title>LARA – EDberg Education</title>
     <link rel="icon" type="image/x-icon" href="/iceberg.ico">
     <!-- Note: Tailwind CDN used for demo purposes. For production, install Tailwind CSS properly. -->
     <script src="https://cdn.tailwindcss.com"></script>
